fixing cart dropdown on small screens, and navbar mods

--- a/src/styles/components/_cart-dropdown.scss
+++ b/src/styles/components/_cart-dropdown.scss
@@ -43,7 +43,7 @@
 @media (max-width: 500px) {
   .cart-dropdown {
     width: 25rem;
-    top: 29rem;
+    top: 15rem;
     left: 50%;
     transform: translateX(-50%);
     padding: 1.9rem;
@@ -59,6 +59,11 @@
 
       &::-webkit-scrollbar {
         width: .6rem;
+      }
+
+      p {
+        font-size: $default-font-size;
+        margin-left: 1rem;
       }
     }
   }
